--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
               </button>
             </div>
           </div>
+
+          <!-- Live refuge list -->
+          <div class="refuge-list-wrapper">
+            <div class="refuge-list-header">
+              <span class="refuge-list-title">Current refuges</span>
+              <span id="refuge-list-count" class="refuge-list-count">0</span>
+            </div>
+            <div id="refuge-list" class="refuge-list" role="list"></div>
+            <div id="refuge-list-empty" class="refuge-list-empty">No refuges yet.</div>
+          </div>
         </aside>
       </div>
     </section>
