--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
           <div class="refuge-list-wrapper">
             <div class="refuge-list-header">
               <span class="refuge-list-title">Current refuges</span>
-              <span id="refuge-list-count" class="refuge-list-count">0</span>
+              <div class="refuge-list-right">
+                <span class="refuge-scroll-indicator" aria-hidden="true">
+                  <i class="fas fa-chevron-up"></i>
+                  <i class="fas fa-chevron-down"></i>
+                </span>
+                <span id="refuge-list-count" class="refuge-list-count">0</span>
+              </div>
             </div>
             <div id="refuge-list" class="refuge-list" role="list"></div>
             <div id="refuge-list-empty" class="refuge-list-empty">No refuges yet.</div>
